# ZenAudio

./: .gitignore  Cargo.toml  README.md  build.rs  ui.slint
.github/workflows/: build.yml
src/: audio.rs  main.rs
